StringsFirstAssignments/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\CEM\Desktop\Informatyka\Coursera\StringsFirstAssignments
-d
C:\Users\CEM\Desktop\Informatyka\Coursera\StringsFirstAssignments\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\CEM\Desktop\Informatyka\Coursera\StringsFirstAssignments\AllCodons.java
<---- end of javadoc command ---->
Loading source file C:\Users\CEM\Desktop\Informatyka\Coursera\StringsFirstAssignments\AllCodons.java...
C:\Users\CEM\Desktop\Informatyka\Coursera\StringsFirstAssignments\AllCodons.java:26: error: reached end of file while parsing
public String findGene(String dna){
                                   ^
1 error
